fixed overflow on hero because of circle animation

--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -7,6 +7,7 @@
 	/* background-image: url(./../../assets/images/desktop/hero-background.jpg);
   background-size: cover; */
   background-color: #ffda43;
+  overflow: hidden;
 }
 
 .hero-container-padding {
